# bcc-wallet

./: LICENSE  README.md  bors.toml  cabal.project  default.nix  docker-compose.yml  release.nix  shell.nix  stack.yaml  weeder.dhall
lib/cli/: bcc-wallet-cli.cabal
lib/cli/src/Bcc/: CLI.hs
lib/cli/test/data/Bcc/CLISpec/: --help  key --help  key from-recovery-phrase --help  transaction create --help  transaction fees --help
lib/cli/test/unit/Bcc/: CLISpec.hs
lib/core/: bcc-wallet-core.cabal
lib/core-integration/: bcc-wallet-core-integration.cabal
lib/core-integration/src/Bcc/Wallet/: BenchShared.hs  LatencyBenchShared.hs
lib/core-integration/src/Test/Integration/: Faucet.hs
lib/core-integration/src/Test/Integration/Framework/: Context.hs  DSL.hs  TestData.hs
lib/core-integration/src/Test/Integration/Scenario/API/: Network.hs
lib/core-integration/src/Test/Integration/Scenario/CLI/: Miscellaneous.hs  Network.hs  Port.hs
lib/core/src/Bcc/: Wallet.hs
lib/core/src/Bcc/Cole/Codec/: Cbor.hs
lib/core/src/Bcc/DB/: Sqlite.hs
lib/core/src/Bcc/DB/Sqlite/: Delete.hs
lib/core/src/Bcc/Pool/: DB.hs  Metadata.hs
lib/core/src/Bcc/Pool/DB/: Log.hs  MVar.hs  Model.hs  Sqlite.hs
lib/core/src/Bcc/Pool/DB/Sqlite/: TH.hs
lib/core/src/Bcc/Wallet/: Api.hs  Compat.hs  DB.hs  Gen.hs  Logging.hs  Network.hs  Orphans.hs  Registry.hs  TokenMetadata.hs  Transaction.hs  Unsafe.hs  Util.hs  Version.hs
lib/core/src/Bcc/Wallet/Api/: Client.hs  Link.hs  Server.hs  Types.hs
lib/core/src/Bcc/Wallet/Api/Server/: Tls.hs
lib/core/src/Bcc/Wallet/DB/: MVar.hs  Model.hs  Sqlite.hs
lib/core/src/Bcc/Wallet/DB/Sqlite/: TH.hs  Types.hs
lib/core/src/Bcc/Wallet/Network/: Ports.hs
lib/core/src/Bcc/Wallet/Primitive/: AddressDerivation.hs  AddressDiscovery.hs  CoinSelection.hs  Collateral.hs  Migration.hs  Model.hs  Slotting.hs  SyncProgress.hs  Types.hs
lib/core/src/Bcc/Wallet/Primitive/AddressDerivation/: Cole.hs  Icarus.hs  MintBurn.hs  Shared.hs  SharedKey.hs  Sophie.hs
lib/core/src/Bcc/Wallet/Primitive/AddressDiscovery/: Random.hs  Sequential.hs  Shared.hs
lib/core/src/Bcc/Wallet/Primitive/CoinSelection/: Balance.hs  Collateral.hs  Gen.hs
lib/core/src/Bcc/Wallet/Primitive/Delegation/: State.hs  (+1 more)
lib/core/src/Bcc/Wallet/TokenMetadata/: MockServer.hs
lib/core/src/Bcc/Wallet/Version/: TH.hs
lib/core/src/Control/Concurrent/: Concierge.hs
lib/core/src/Crypto/Hash/: Utils.hs
lib/core/src/Data/: Quantity.hs
lib/core/src/Data/Time/: Text.hs  Utils.hs
lib/core/src/Network/: Ntp.hs
lib/core/src/Network/Wai/Middleware/: Logging.hs  ServerError.hs
lib/core/src/Shardagnostic/Network/Client/: Wallet.hs
lib/core/src/UnliftIO/: Compat.hs
lib/core/test/bench/db/: Main.hs
lib/core/test/data/PKIs/: README.md  bcc-sl-x509.yaml
lib/core/test/unit/Bcc/: WalletSpec.hs
lib/core/test/unit/Bcc/Wallet/: ApiSpec.hs  NetworkSpec.hs  RegistrySpec.hs  TokenMetadataSpec.hs  TransactionSpec.hs
lib/core/test/unit/Data/: QuantitySpec.hs
lib/launcher/: bcc-wallet-launcher.cabal
lib/launcher/src/Bcc/: Launcher.hs  Startup.hs
lib/launcher/src/Bcc/Launcher/: Node.hs
lib/launcher/src/Bcc/Startup/: POSIX.hs  Windows.hs
lib/launcher/test/unit/Bcc/: LauncherSpec.hs  StartupSpec.hs
lib/numeric/: bcc-numeric.cabal
lib/numeric/src/Bcc/Numeric/: Util.hs
lib/numeric/test/unit/Bcc/Numeric/: UtilSpec.hs
lib/sophie/: bcc-wallet.cabal
lib/sophie/bench/: Latency.hs  Restore.hs
lib/sophie/exe/: bcc-wallet.hs  local-cluster.hs  mock-token-metadata-server.hs
lib/sophie/src/Bcc/Wallet/: Sophie.hs
lib/sophie/src/Bcc/Wallet/Cole/: Compatibility.hs
lib/sophie/src/Bcc/Wallet/Sophie/: Compatibility.hs  Launch.hs  Network.hs  Pools.hs  Transaction.hs
lib/sophie/test/data/: token-metadata.json
lib/sophie/test/data/bcc-node-sophie/: aurum-genesis.yaml  bft-leader.vrf.skey  bft-leader.vrf.vkey  cole-genesis.yaml  gen-cole-funds.sh  node.config  regenerate-cole.sh  regenerate.sh  sophie-genesis.yaml  start.sh
lib/sophie/test/data/bcc-node-sophie/faucet-addrs/: faucet1.sophie.key  faucet10.sophie.key  faucet100.sophie.key  faucet101.sophie.key  faucet102.sophie.key  faucet103.sophie.key  faucet104.sophie.key  faucet105.sophie.key  faucet106.sophie.key  faucet107.sophie.key  faucet108.sophie.key  faucet109.sophie.key  faucet11.sophie.key  faucet110.sophie.key  faucet111.sophie.key  faucet112.sophie.key  faucet113.sophie.key  faucet114.sophie.key  faucet115.sophie.key  faucet116.sophie.key  faucet117.sophie.key  faucet118.sophie.key  faucet119.sophie.key  faucet12.sophie.key  faucet120.sophie.key  faucet121.sophie.key  faucet122.sophie.key  faucet123.sophie.key  faucet124.sophie.key  faucet125.sophie.key  faucet126.sophie.key  faucet127.sophie.key  faucet128.sophie.key  faucet129.sophie.key  faucet13.sophie.key  faucet130.sophie.key  faucet131.sophie.key  faucet132.sophie.key  faucet133.sophie.key  faucet134.sophie.key  (+160 more)
lib/sophie/test/data/zerepoch/: auction_1-2.json  crowdfunding-success-4.json  currency-2.json  escrow-redeem_1-3.json  escrow-redeem_2-4.json  escrow-refund-2.json  future-increase-margin-5.json  future-increase-margin-6.json  future-increase-margin-7.json  future-pay-out-2.json  future-pay-out-6.json  future-settle-early-6.json  game-sm-success-2.json  game-sm-success_2-4.json  game-sm-success_2-6.json  multisig-failure-2.json  multisig-sm-10.json  multisig-sm-11.json  multisig-sm-2.json  multisig-sm-3.json  multisig-sm-4.json  multisig-sm-5.json  multisig-sm-6.json  multisig-sm-7.json  multisig-sm-8.json  multisig-sm-9.json  multisig-success-2.json  ping-pong-2.json  ping-pong-3.json  ping-pong_2-2.json  prism-3.json  pubkey-2.json  stablecoin_1-3.json  stablecoin_1-4.json  stablecoin_2-2.json  token-account-2.json  token-account-5.json  uniswap-10.json  uniswap-2.json  uniswap-7.json  (+2 more)
lib/sophie/test/integration/: Main.hs
lib/sophie/test/unit/: Main.hs
lib/strict-non-empty-containers/: strict-non-empty-containers.cabal
lib/strict-non-empty-containers/src/Data/Map/Strict/: NonEmptyMap.hs
lib/strict-non-empty-containers/src/Data/Set/Strict/: NonEmptySet.hs
(+345 files in other folders)
