name:                bcc-wallet-launcher
version:             2021.9.29
synopsis:            Utilities for a building commands launcher
homepage:            https://github.com/The-Blockchain-Company/bcc-wallet
author:              IOHK Engineering Team
maintainer:          operations@tbco.io
copyright:           2021-2022 TBCO
license:             Apache-2.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (flag(release))
    ghc-options:
      -Werror
  build-depends:
      base
    , bytestring
    , code-page
    , contra-tracer
    , either
    , extra
    , filepath
    , fmt
    , tbco-monitoring
    , process
    , text
    , text-class
    , unliftio
    , unliftio-core
  hs-source-dirs:
      src
  exposed-modules:
      Bcc.Launcher
    , Bcc.Launcher.Node
    , Bcc.Startup
  if os(windows)
    build-depends: Win32
    other-modules: Bcc.Startup.Windows
    cpp-options:   -DWINDOWS
  else
    build-depends: unix
    other-modules: Bcc.Startup.POSIX

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded
      -rtsopts
      -Wall
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , bytestring
    , bcc-wallet-launcher
    , bcc-wallet-test-utils
    , contra-tracer
    , fmt
    , hspec
    , hspec-core
    , hspec-expectations
    , tbco-monitoring
    , process
    , retry
    , text
    , text-class
    , time
    , unliftio
  build-tools:
      hspec-discover
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
  main-is:
      Main.hs
  other-modules:
      Bcc.LauncherSpec
    , Bcc.StartupSpec
  if os(windows)
    cpp-options:   -DWINDOWS
