name:                bcc-numeric
version:             2020.12.8
synopsis:            Types and functions for performing numerical calculations.
homepage:            https://github.com/The-Blockchain-Company/bcc-wallet
author:              IOHK Engineering Team
maintainer:          operations@tbco.io
copyright:           2021-2022 TBCO
license:             Apache-2.0
category:            Math
build-type:          Simple
cabal-version:       >=1.10

flag release
    description: Enable optimization and `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , lattices
    , safe
  hs-source-dirs:
      src
  exposed-modules:
      Bcc.Numeric.Util

test-suite unit
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
  if (flag(release))
    ghc-options: -O2 -Werror
  build-depends:
      base
    , bcc-numeric
    , hspec
    , QuickCheck
  build-tools:
      hspec-discover
  type:
     exitcode-stdio-1.0
  hs-source-dirs:
      test/unit
  main-is:
      Main.hs
  other-modules:
      Bcc.Numeric.UtilSpec
